--- a/configs/ansible/inventory/inventory_root.yml
+++ b/configs/ansible/inventory/inventory_root.yml
@@ -1,9 +1,7 @@
 hive:
-  var_files:
-    - ../vars/credentials.yml
   hosts:
     hive-proxmox:
       ansible_user: root
-      ansible_password: "{{ ansible_password }}"
+      ansible_password: "{{ proxmox_ansible_password }}"
       ansible_host: 192.168.178.66
       ansible_python_interpreter: /usr/bin/python3.13
