--- a/configs/ansible/inventory/inventory_root.yml
+++ b/configs/ansible/inventory/inventory_root.yml
@@ -5,3 +5,8 @@ hive:
       ansible_password: "{{ proxmox_ansible_password }}"
       ansible_host: 192.168.178.66
       ansible_python_interpreter: /usr/bin/python3.13
+    hive02-proxmox:
+      ansible_user: root
+      ansible_password: "{{ proxmox02_ansible_password }}"
+      ansible_host: 192.168.178.67
+      ansible_python_interpreter: /usr/bin/python3.13
