fixes small errors in playbook

--- a/configs/ansible/playbooks/create_terraform_user.yml
+++ b/configs/ansible/playbooks/create_terraform_user.yml
@@ -5,16 +5,20 @@
   vars_files:
     - ../vars/credentials.yml
   tasks:
+    - name: Install dependencies for using proxmox via ansible
+      ansible.builtin.package:
+        name: python3-proxmoxer
+        state: present
     - name: Create the terraform user
       community.proxmox.proxmox_user:
         api_user: root@pam
-        api_password: {{ ansible_password }}
+        api_password: "{{ ansible_password }}"
         api_host: hive02
         userid: terraform@pve
     - name: Check if role exists
       ansible.builtin.shell:
         cmd: pveum role list --noborder | grep Terraform
-        register: find_terraform_role
+      register: find_terraform_role
       ignore_errors: true
     - name: Create role
       # TODO: This can probably be replaced by community.proxmox.proxmox_role
@@ -41,11 +45,11 @@
             User.Modify, VM.Config.HWType, VM.Audit, Sys.PowerMgmt,
             VM.GuestAgent.Audit, Mapping.Audit, VM.GuestAgent.FileRead,
             Permissions.Modify
-        when: find_terraform_role.rc != 0
+      when: find_terraform_role.rc != 0
     - name: Set user role
       community.proxmox.proxmox_access_acl:
         api_user: root@pam
-        api_password: {{ ansible_password }}
+        api_password: "{{ ansible_password }}"
         api_host: hive02
         state: present
         path: /
@@ -55,7 +59,7 @@
     - name: Check if token for terraform user exists
       ansible.builtin.shell:
         cmd: pveum user token list terraform@pve --noborder | grep terraform
-        register: find_terraform_token
+      register: find_terraform_token
       ignore_errors: true
     - name: Create token for terraform proxmox user
       ansible.builtin.command:
