restarts sshd after changing configuration

--- a/configs/ansible/playbooks/create_ansible_user.yml
+++ b/configs/ansible/playbooks/create_ansible_user.yml
@@ -36,3 +36,9 @@
         src: ../templates/10-allow-local-connection.conf.jinja
         dest: /etc/ssh/sshd_config.d/10-allow-local-connection.conf
         validate: sshd -tf %s
+      notify: Restart sshd
+  handlers:
+    - name: Restart sshd
+      ansible.builtin.service:
+        name: sshd
+        state: restarted
