--- a/configs/ansible/inventory/inventory.yml
+++ b/configs/ansible/inventory/inventory.yml
@@ -4,7 +4,11 @@ hive:
       ansible_user: ansible
       ansible_host: 192.168.178.66
       ansible_port: "{{ ssh_port }}"
+      ansible_become: true # become root by default
+      proxmox_root_password: "{{ proxmox_ansible_password }}"
     hive02-proxmox:
       ansible_user: ansible
       ansible_host: 192.168.178.67
       ansible_port: "{{ ssh_port }}"
+      ansible_become: true # become root by default
+      proxmox_root_password: "{{ proxmox02_ansible_password }}"
