fixes name of variable for hostname

--- a/configs/ansible/playbooks/create_terraform_user.yml
+++ b/configs/ansible/playbooks/create_terraform_user.yml
@@ -79,7 +79,7 @@
     - name: Print the token we just created so we can save it
       ansible.builtin.debug:
           msg: |
-            Token for {{ host }}:
+            Token for {{ inventory_hostname }}:
             {{ create_token.stdout }}
 
             WARNING: You will not be able to read this token again. Make sure to save it.
