adds proxmox api tokens to inventory

--- a/configs/ansible/inventory/inventory.yml
+++ b/configs/ansible/inventory/inventory.yml
@@ -6,9 +6,11 @@ hive:
       ansible_port: "{{ ssh_port }}"
       ansible_become: true # become root by default
       proxmox_root_password: "{{ proxmox_ansible_password }}"
+      proxmox_token: "{{ proxmox_api_token_secret }}"
     hive02-proxmox:
       ansible_user: ansible
       ansible_host: 192.168.178.67
       ansible_port: "{{ ssh_port }}"
       ansible_become: true # become root by default
       proxmox_root_password: "{{ proxmox02_ansible_password }}"
+      proxmox_token: "{{ proxmox_02_api_token_secret }}"
