fixes hard-coded host name

--- a/configs/ansible/inventory/inventory.yml
+++ b/configs/ansible/inventory/inventory.yml
@@ -7,6 +7,7 @@ hive:
       ansible_become: true # become root by default
       proxmox_root_password: "{{ proxmox_ansible_password }}"
       proxmox_token: "{{ proxmox_api_token_secret }}"
+      proxmox_host: hive
     hive02-proxmox:
       ansible_user: ansible
       ansible_host: 192.168.178.67
@@ -14,3 +15,4 @@ hive:
       ansible_become: true # become root by default
       proxmox_root_password: "{{ proxmox02_ansible_password }}"
       proxmox_token: "{{ proxmox_02_api_token_secret }}"
+      proxmox_host: hive02
